function(unit_test testname)
    add_executable(${testname} ${testname})
    target_link_libraries(${testname} ToyRobot)
    add_test(${testname} ${testname})
endfunction()

unit_test(testfacing)
unit_test(testcoordinate)
unit_test(testrobot)
unit_test(testboard2d)
unit_test(testrobotcommands)